fix alignment of hero h2

--- a/css/custom.css
+++ b/css/custom.css
@@ -381,14 +381,14 @@ nav{
     .title-2{
         font-size: 5em;
         line-height: 1.0;
-        letter-spacing: 2px;
     }
     
     #heroimg h2{
         font-weight: bold;
         font-size: 2.8em;
-        padding-top: 50px; 
-        padding-bottom: 20px;
+        /* padding-top: 50px; 
+        padding-bottom: 20px; */
+        line-height: 1;
     }
     .mid-banner{
         padding-top: 7%;
@@ -442,16 +442,17 @@ nav{
         line-height: 1.0;
     }
     .title-2{
-        font-size: 6.5em;
+        font-size: 6.9em;
         line-height: 1.0;
     }
     
     #heroimg h2{
         font-weight: bold;
         font-size: 3em;
-        padding-top: 50px; 
-        padding-bottom: 20px;
+        /* padding-top: 50px; 
+        padding-bottom: 20px; */
         letter-spacing: 2px;
+        line-height: 1.1;
     }
 
 }
